this is pong now, i guess

--- a/breakout.html
+++ b/breakout.html
@@ -13,7 +13,10 @@
   <body>
     <div class='breakout-container'>
       <div class='ball'></div>
-      <div class='paddle'></div>
+      <div class='paddle player-1'></div>
+      <div class='paddle player-2'></div>
+      <div class='score score-1'></div>
+      <div class='score score-2'></div>
     </div>
   </body>
 </html>
